<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CodeAnimationActivity">
    <Button
        android:id="@+id/toXml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toXml"
        android:background="@color/btn_bg"
        android:layout_marginLeft="240dp"
        android:onClick="onClick"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showCode"/>
    <ImageView
        android:id="@+id/pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:src="@drawable/pic"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        >
        <Button
            android:id="@+id/translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            android:background="@color/btn_bg"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/alpha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alpha"
            android:background="@color/btn_bg"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/rotate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rotate"
            android:background="@color/btn_bg"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scale"
            android:background="@color/btn_bg"
            android:onClick="onClick"/>
    </LinearLayout>
</FrameLayout>
